--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,6 +21,15 @@
     display: flex;
 }
 
+/* .menuBtn {
+    display: none;
+} */
+
+.menuBtn {
+    display: block;
+    cursor: pointer;
+}
+
 .menuItems {
     display: flex;
     gap: 47px;
@@ -45,5 +54,33 @@
         margin-right: 10%;
         flex-direction: column;
         align-items: flex-end;
+        gap: 11px;
+        z-index: 3;
+    }
+
+    .menuBtn {
+        display: block;
+        cursor: pointer;
+    }
+
+    .menuItems {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        gap: 13px;
+        border-radius: 10px;
+        background: rgb(25, 55, 109);
+        background: linear-gradient(
+            0deg,
+            rgba(25, 55, 109, 0.2)0%, 
+            rgba(25, 55, 109, 1) 100%
+        );
+        padding: 24px 33px;
+        box-shadow: 0px 0px 4px 0 rgba(0, 0, 0, 0.25);
+    }
+
+    .menuOpen {
+        display: flex;
+        z-index: 1;
     }
 }
