Fixed typo on a class name in the CSS file

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -39,7 +39,7 @@
     margin-bottom: 52px;
 }
 
-.contactBtn {
+.ContactBtn {
     text-decoration: none;
     background-color: var(--color-primary);
     color: var(--color-text);
