--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -26,7 +26,9 @@
     width: 45%;
     display: flex;
     flex-wrap: wrap;
-    gap: 37px;
+    /* gap: 37px; */
+    row-gap: 20px;
+    column-gap: 37px;
 }
 
 .skill {
@@ -120,6 +122,14 @@
     }
 
     .history {
-        width: 100;
+        width: 100%;
+        gap: 9px;
+        /* gap: 20px; */
     }
+
+    /* .historyItem {
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+    } */
 }
