--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -102,10 +102,11 @@
 
 .historyItemDetails ul {
     margin-top: 6px;
-    list-style-position: inside;
+    list-style-position: outside;
     font-size: 25px;
     list-style-type: disc;
     margin-left: 17px;
+    padding-left: 1.2rem;
 }
 
 @media screen and (max-width: 830px) {
