--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -23,10 +23,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
 }
 
 .aboutImage {
-    width: 35%;
+    width: 30%;
 }
 
 .aboutItems {
@@ -43,11 +45,9 @@
     border-radius: 20px;
     list-style: none;
     padding: 25px;
-    background-image: linear-gradient(
-        90deg,
-        rgba(165, 215, 232, 0.42) 0%, 
-        rgba(255, 255, 255, 0) 100%
-    );
+    background-image: linear-gradient(90deg,
+            rgba(165, 215, 232, 0.42) 0%,
+            rgba(255, 255, 255, 0) 100%);
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: 0.4s;
@@ -64,6 +64,25 @@
 
 .aboutItem p {
     font-size: 25px;
+}
+
+.rightSide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 50px;
+    margin-left: 40px;
+    flex: 1;
+}
+
+.introText {
+    color: var(--color-text);
+    font-size: 25px;
+    line-height: 1.6;
+    font-family: var(--font-roboto);
+    font-weight: 300;
+    max-width: 800px;
+    margin-bottom: 0;
 }
 
 @media screen and (max-width: 830px) {
@@ -88,5 +107,17 @@
     .aboutItem {
         padding-left: 0;
         padding-right: 0;
+    }
+
+    .introText {
+        margin-left: 0;
+        padding: 0 16px;
+        text-align: center;
+    }
+
+    .rightSide {
+        margin-left: 0;
+        padding: 0 16px;
+        align-items: center;
     }
 }
