--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -83,7 +83,7 @@
 }
 
 .historyItem img {
-    width: 50px;
+    width: 60px;
 }
 
 .historyItemDetails {
@@ -108,6 +108,11 @@
     margin-left: 17px;
     padding-left: 1.2rem;
 }
+
+.historyItemDetails ul li {
+    margin-bottom: 6px;
+}
+
 
 @media screen and (max-width: 830px) {
     .content {
