--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -24,11 +24,9 @@
     font-weight: 900;
     margin-bottom: 33px;
     font-family: var(--font-roboto);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 1) 70%,
-        rgba(255, 255, 255, 0) 120%
-    );
+    background: linear-gradient(90deg,
+            rgba(255, 255, 255, 1) 70%,
+            rgba(255, 255, 255, 0) 120%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
@@ -37,6 +35,7 @@
     font-size: 30px;
     font-family: var(--font-roboto);
     margin-bottom: 52px;
+    max-width: 900px;
 }
 
 .ContactBtn {
@@ -64,9 +63,11 @@
     0% {
         transform: translate(0, 0px);
     }
+
     50% {
         transform: translate(0, 10px);
     }
+
     100% {
         transform: translate(0, -0px);
     }
@@ -83,9 +84,10 @@
     border-radius: 764px;
     background: rgba(25, 55, 109, 0.7);
     filter: blur(100px);
-    
+
     z-index: 0;
 }
+
 .bottomBlur {
     position: absolute;
     width: 70vw;
