Some fine tuning in the About section. Updated my history / experience
-- TODO--
Add "What drives me" section to fill out empty space under Experience icons.

Some more fine tuning and design tweaking

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -82,7 +82,7 @@
     font-family: var(--font-roboto);
     font-weight: 300;
     max-width: 800px;
-    margin-bottom: 0;
+    margin-bottom: 40px;
 }
 
 @media screen and (max-width: 830px) {
